# ha-terra-listens

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/terra_listens/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  sensor.py
custom_components/terra_listens/translations/: en.json
tests/: __init__.py  test_config_flow.py  test_coordinator.py  test_sensors.py
